--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <nav>
         <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">Inicio</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
+            <li class="menu-item"><a href="conhecimentos.html" class="menu-link">Conhecimentos</a></li>
             <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
             <li class="menu-item"><a href="#" class="menu-link">Sobre</a></li>
         </ul>
@@ -61,7 +61,7 @@
 <section class="sessao-conhecimento">
     <div class="sessao-header">
 
-        <h1>Alguns Dos Meus Conhecimentos</h1>              
+        <h1>Alguns Conhecimentos</h1>              
     </div>
     <div class="conhecimentos">
         
@@ -133,7 +133,12 @@
         <div class="conhecimentos-img-wrapper">
             <img src="imagens/conhecimentos.png" alt="imagem conhecimento">
         </div>
+
+       
+
         </div>
+      <a href="conhecimentos.html" target="_blank">  <button class="btn-p"> <h1>Meus Conhecimentos</h1>
+        </button></a>
     </section>
 
 
